Added support for Cantonese

--- a/deployment/requirements.txt
+++ b/deployment/requirements.txt
@@ -27,3 +27,4 @@ pathvalidate
 pii-manager @ git+https://github.com/mmanteli/multilingual-PII-tool@db59603
 iso639-lang==2.2.3
 klpt==0.1.6
+pycantonese==3.4.0
