Updated reports for Finnish

--- a/reports/mono-2.0/HPLT-v2-fin_Latn.lite.yaml
+++ b/reports/mono-2.0/HPLT-v2-fin_Latn.lite.yaml
@@ -587,58 +587,36 @@ docs_wds: '[[5, 272319], [5.1, 278148], [5.2, 295516], [5.3, 301656], [5.4, 3251
   [9.4, 381427], [9.5, 365109], [9.6, 368521], [9.7, 265423], [9.8, 166946], [9.9,
   70647], [10, 18250]]'
 corpus: HPLT-v2-fin_Latn.tsv
-hardrules_tags: '{"pii": 7554569}'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 143507857, "no_urls": 20972628, "no_bad_encoding": 15339, "pii": 7554569}'
 sentence_pairs: 976619897
 src_bytes: 149.9 GB
 src_chars: 154736868874
-src_langs: '[["fin_Latn", 801148336], ["unk", 31481093], ["eng_Latn", 26196738], ["est_Latn",
-  5285716], ["nob_Latn", 3561200], ["nno_Latn", 3482402], ["zho_Hans", 2733376], ["fao_Latn",
-  2181055], ["ron_Latn", 2147375], ["lit_Latn", 2033317], ["srd_Latn", 1987658], ["gaz_Latn",
-  1934129], ["ltz_Latn", 1914905], ["swe_Latn", 1883966], ["som_Latn", 1784296], ["lim_Latn",
-  1738451], ["vec_Latn", 1729721], ["taq_Latn", 1558949], ["bug_Latn", 1546286], ["deu_Latn",
-  1541845], ["ita_Latn", 1523861], ["sna_Latn", 1462546], ["sot_Latn", 1421754], ["kab_Latn",
-  1396906], ["mlt_Latn", 1382289], ["zsm_Latn", 1377342], ["glg_Latn", 1341831], ["lmo_Latn",
-  1332876], ["epo_Latn", 1332174], ["wol_Latn", 1321239], ["fra_Latn", 1312351], ["fuv_Latn",
-  1281148], ["hau_Latn", 1239659], ["scn_Latn", 1216685], ["ltg_Latn", 1187030], ["uzn_Latn",
-  1177824], ["zho_Hant", 1169996], ["mri_Latn", 1112436], ["sun_Latn", 1069938], ["ilo_Latn",
-  1068837], ["grn_Latn", 1062857], ["fur_Latn", 1048630], ["bam_Latn", 1019189], ["min_Latn",
-  1009208], ["lus_Latn", 1002474], ["swh_Latn", 987943], ["lij_Latn", 973386], ["cat_Latn",
-  967975], ["lvs_Latn", 964964], ["smo_Latn", 939883], ["oci_Latn", 938329], ["isl_Latn",
-  924434], ["ind_Latn", 915556], ["als_Latn", 888465], ["eus_Latn", 865119], ["ewe_Latn",
-  863774], ["lua_Latn", 851943], ["hne_Deva", 832775], ["knc_Latn", 802731], ["ban_Latn",
-  799634], ["afr_Latn", 794928], ["crh_Latn", 781259], ["cym_Latn", 773433], ["nld_Latn",
-  755882], ["por_Latn", 755573], ["luo_Latn", 749857], ["pag_Latn", 742478], ["fij_Latn",
-  738736], ["jav_Latn", 732677], ["ast_Latn", 723922], ["gla_Latn", 711292], ["plt_Latn",
-  706637], ["hat_Latn", 699065], ["szl_Latn", 678231], ["quy_Latn", 650382], ["slk_Latn",
-  647347], ["ayr_Latn", 640548], ["bos_Latn", 621029], ["hun_Latn", 615428], ["dan_Latn",
-  614671], ["ace_Latn", 594272], ["tpi_Latn", 585736], ["bjn_Latn", 580476], ["dik_Latn",
-  563817], ["spa_Latn", 560618], ["hrv_Latn", 551731], ["sag_Latn", 539620], ["pap_Latn",
-  539176], ["tur_Latn", 532652], ["kea_Latn", 525683], ["tso_Latn", 518521], ["dyu_Latn",
-  512370], ["lug_Latn", 501496], ["mos_Latn", 495545], ["pol_Latn", 472259], ["umb_Latn",
-  459719], ["slv_Latn", 438730], ["cjk_Latn", 418384], ["ces_Latn", 418211], ["yor_Latn",
-  411318], ["tgl_Latn", 410375], ["twi_Latn", 382137], ["tha_Thai", 381301], ["war_Latn",
-  371511], ["nus_Latn", 365368], ["tsn_Latn", 357759], ["kon_Latn", 343891], ["kac_Latn",
-  342720], ["bem_Latn", 340969], ["lin_Latn", 336462], ["ceb_Latn", 328360], ["tuk_Latn",
-  314581], ["kmb_Latn", 309998], ["azj_Latn", 293523], ["kam_Latn", 289351], ["ibo_Latn",
-  285023], ["kik_Latn", 279692], ["kbp_Latn", 269101], ["ssw_Latn", 267552], ["yue_Hant",
-  260123], ["gle_Latn", 257513], ["kor_Hang", 239432], ["shn_Mymr", 236092], ["xho_Latn",
-  230151], ["fon_Latn", 229390], ["kmr_Latn", 228923], ["vie_Latn", 227876], ["nso_Latn",
-  226386], ["run_Latn", 221080], ["tum_Latn", 193148], ["nya_Latn", 177401], ["azb_Arab",
-  176578], ["dzo_Tibt", 128934], ["zul_Latn", 113236], ["kin_Latn", 111768], ["jpn_Jpan",
-  91914], ["rus_Cyrl", 88138], ["ell_Grek", 80274], ["ara_Arab", 27713], ["bod_Tibt",
-  25610], ["bul_Cyrl", 14693], ["prs_Arab", 13703], ["ukr_Cyrl", 10389], ["pan_Guru",
-  10157], ["bho_Deva", 9183], ["awa_Deva", 9019], ["mag_Deva", 8241], ["heb_Hebr",
-  7689], ["srp_Cyrl", 7116], ["bak_Cyrl", 6887], ["lao_Laoo", 6747], ["khm_Khmr",
-  6422], ["mkd_Cyrl", 5744], ["bel_Cyrl", 5026], ["kaz_Cyrl", 3880], ["pes_Arab",
-  3550], ["knc_Arab", 3550], ["ydd_Hebr", 3275], ["snd_Arab", 2759], ["hin_Deva",
-  2685], ["tgk_Cyrl", 2425], ["hye_Armn", 2376], ["mai_Deva", 1699], ["san_Deva",
-  1684], ["tam_Taml", 1463], ["tzm_Tfng", 1349], ["kir_Cyrl", 1255], ["mar_Deva",
-  1186], ["kas_Arab", 1165], ["kat_Geor", 1151], ["khk_Cyrl", 1105], ["kas_Deva",
-  1105], ["tat_Cyrl", 885], ["ckb_Arab", 729], ["taq_Tfng", 699], ["tel_Telu", 681],
-  ["ben_Beng", 511], ["pbt_Arab", 425], ["ace_Arab", 422], ["urd_Arab", 409], ["bjn_Arab",
-  386], ["amh_Ethi", 359], ["kan_Knda", 313], ["sat_Olck", 278], ["mya_Mymr", 258],
-  ["mal_Mlym", 224], ["sin_Sinh", 139], ["mni_Beng", 120], ["guj_Gujr", 101], ["npi_Deva",
-  100], ["uig_Arab", 95], ["ory_Orya", 88], ["asm_Beng", 77], ["tir_Ethi", 52]]'
+src_langs: '[["fi", 861956291], ["en", 37166219], ["it", 21740620], ["de", 9421775], ["fr", 7118783], 
+  ["et", 4005363], ["sv", 3765042], ["nl", 3466123], ["es", 3145116], ["da", 2756800], ["pt", 1991672],
+  ["pl", 1584983], ["ru", 1176553], ["cs", 1176178], ["hu", 906768], ["lt", 863990], ["eo", 850622], 
+  ["sl", 838321], ["tr", 817964], ["nb", 788002], ["id", 741119], ["ceb", 728972], ["zh", 728519], 
+  ["ca", 703367], ["hr", 631170], ["el", 548658], ["ms", 536730], ["sr", 531156], ["ja", 507511], 
+  ["eu", 412803], ["la", 399428], ["ko", 344737], ["ro",  333569], ["uk", 311438], ["als", 250931], 
+  ["oc", 213015], ["nn", 212905], ["gl", 189670], ["lv", 184660], ["fa", 149301], ["vi", 147512], 
+  ["war", 142327], ["uz", 129051], ["af", 124551], ["sq", 122480], ["th", 122246], ["vo", 100175], 
+  ["ml", 93212], ["ur", 79500], ["kn", 76211], ["sk", 73429], ["az", 67255], ["bs", 64416], ["nds", 63974], 
+  ["ar", 52785], ["sw", 48379], ["cy", 45904], ["tt", 40372], ["is", 37837], ["jv", 37437],
+  ["tl", 34590], ["io", 34229], ["fy", 33255], ["jbo", 31523], ["hy", 27897], ["br", 27638], 
+  ["ilo", 27187], ["mk", 23571], ["ast", 22802], ["su", 22183], ["lmo", 20057], ["kw", 19902],
+  ["li", 19586], ["kk", 17904], ["he", 17613], ["vep", 15885], ["bg", 15522], ["ta", 15198], 
+  ["ia", 15144], ["si", 14980], ["mt", 14540], ["ga", 13365], ["hi", 13032], ["sco", 12790], ["bn", 11150], 
+  ["bar", 10748], ["ka", 10522], ["lb", 10006], ["mg", 9463], ["mr", 9007], ["te", 8562], ["my", 8209], 
+  ["mn", 7957], ["ie", 7026], ["yue", 6901], ["ne", 6439], ["min", 6375], ["tk", 6291], ["scn", 6012], 
+  ["diq", 5649], ["ht", 5535], ["so", 5500], ["be", 5204], ["gd", 5097], ["wuu", 4880], ["gv", 4442], 
+  ["qu", 4344], ["km", 3866], ["nap", 3855], ["ce", 3261], ["pms", 3122], ["ku", 2923], ["gu", 2794], 
+  ["azb", 2794], ["an", 2621], ["gn", 2553], ["frr", 2391], ["lo", 2340], ["hsb", 2257], ["pnb", 2094], 
+  ["mwl", 1971], ["bo", 1934], ["ba", 1888], ["yi", 1887], ["wa", 1846], ["rm", 1821], ["eml", 1763], 
+  ["pa", 1734], ["tg", 1596], ["arz", 1577], ["sah", 1411], ["pam", 1392], ["ky", 1392], ["vec", 1208], 
+  ["ckb", 1058], ["cbk", 969], ["yo", 939], ["new", 920], ["ps", 888], ["gom", 847], ["pfl", 814], ["mhr", 808],
+  ["as", 789], ["sd", 771], ["os", 768], ["or", 747], ["cv", 719], ["ug", 619], ["sc", 555], ["co", 488], 
+  ["nah", 457], ["vls", 455], ["hif", 421], ["dv", 411], ["am", 399], ["sa", 362], ["bpy", 353], ["mzn", 315], 
+  ["bcl", 279], ["dsb", 242], ["bh", 234], ["xal", 225], ["kv", 169], ["mrj", 147], ["lez", 142], ["xmf", 126], 
+  ["myv", 123], ["krc", 121], ["lrc", 91], ["mai", 72], ["rue", 45], ["av", 39], ["tyv", 33], ["bxr", 25], ["dty", 12]]'
 src_tokens: 0
 srclang: fi
 timestamp: 1726526473.986583
