Updated reports for Polish

--- a/reports/mono-2.0/HPLT-v2-pol_Latn.lite.yaml
+++ b/reports/mono-2.0/HPLT-v2-pol_Latn.lite.yaml
@@ -679,59 +679,30 @@ docs_wds: '[[5, 1592582], [5.1, 1614722], [5.2, 1700596], [5.3, 1745296], [5.4, 
   [9.2, 3140468], [9.3, 2575435], [9.4, 2021509], [9.5, 1756930], [9.6, 1473104],
   [9.7, 1046619], [9.8, 686455], [9.9, 312631], [10, 107079]]'
 corpus: HPLT-v2-pol_Latn.tsv
-hardrules_tags: '{"pii": 25132501}'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 556447024, "no_urls": 120496066, "no_bad_encoding": 126234, "pii": 25132501}'
 sentence_pairs: 4460824697
 src_bytes: 615.5 GB
 src_chars: 627308403809
-src_langs: '[["pol_Latn", 3362890016], ["unk", 256025074], ["szl_Latn", 221992666],
-  ["eng_Latn", 80214539], ["slv_Latn", 21176688], ["bos_Latn", 18347528], ["nno_Latn",
-  17577617], ["vec_Latn", 14024899], ["ltz_Latn", 13820232], ["slk_Latn", 13625241],
-  ["ind_Latn", 11293430], ["ces_Latn", 11224717], ["zho_Hans", 11118288], ["hrv_Latn",
-  10699018], ["ltg_Latn", 10627498], ["lao_Laoo", 10073780], ["mlt_Latn", 9715036],
-  ["lmo_Latn", 8418968], ["ita_Latn", 7561485], ["glg_Latn", 7300762], ["srd_Latn",
-  7074180], ["ast_Latn", 6782411], ["epo_Latn", 6699369], ["crh_Latn", 6643926], ["ron_Latn",
-  6527350], ["lit_Latn", 6432557], ["sot_Latn", 6284379], ["deu_Latn", 6178254], ["lim_Latn",
-  6044325], ["zho_Hant", 5813729], ["gla_Latn", 5777419], ["taq_Latn", 5705282], ["fur_Latn",
-  5683335], ["lvs_Latn", 5675529], ["por_Latn", 5628114], ["oci_Latn", 5623056], ["kab_Latn",
-  5549733], ["hun_Latn", 5359332], ["zsm_Latn", 5328535], ["uzn_Latn", 5312734], ["bug_Latn",
-  4903490], ["hat_Latn", 4724156], ["cat_Latn", 4649829], ["swe_Latn", 4594977], ["fra_Latn",
-  4590961], ["pap_Latn", 4586778], ["tha_Thai", 4574114], ["swh_Latn", 4462346], ["als_Latn",
-  4405488], ["luo_Latn", 4258356], ["nld_Latn", 4252723], ["scn_Latn", 4194889], ["lug_Latn",
-  4193193], ["eus_Latn", 3878682], ["wol_Latn", 3857566], ["afr_Latn", 3828219], ["som_Latn",
-  3668092], ["kea_Latn", 3491058], ["grn_Latn", 3463339], ["hau_Latn", 3356966], ["fao_Latn",
-  3337524], ["lij_Latn", 3288517], ["knc_Latn", 3210989], ["dan_Latn", 3097018], ["cym_Latn",
-  3044113], ["sun_Latn", 2983949], ["bam_Latn", 2981403], ["quy_Latn", 2934819], ["min_Latn",
-  2928867], ["nob_Latn", 2917190], ["tuk_Latn", 2888347], ["ilo_Latn", 2865250], ["tur_Latn",
-  2653489], ["tpi_Latn", 2643506], ["jav_Latn", 2578939], ["dik_Latn", 2550888], ["fij_Latn",
-  2550577], ["ibo_Latn", 2533859], ["ban_Latn", 2524834], ["azb_Arab", 2512361], ["kmr_Latn",
-  2492117], ["fin_Latn", 2475136], ["smo_Latn", 2438393], ["fuv_Latn", 2428215], ["isl_Latn",
-  2311139], ["spa_Latn", 2273914], ["lus_Latn", 2197680], ["hne_Deva", 2147001], ["plt_Latn",
-  2138116], ["yue_Hant", 2136650], ["ace_Latn", 2093460], ["bjn_Latn", 2028377], ["est_Latn",
-  1971113], ["tsn_Latn", 1913718], ["sag_Latn", 1834568], ["lua_Latn", 1824254], ["ayr_Latn",
-  1724271], ["kon_Latn", 1695841], ["nus_Latn", 1682746], ["lin_Latn", 1661732], ["mos_Latn",
-  1659720], ["kac_Latn", 1645491], ["ceb_Latn", 1627264], ["ewe_Latn", 1578159], ["mri_Latn",
-  1577433], ["kor_Hang", 1516044], ["nso_Latn", 1465072], ["pag_Latn", 1399965], ["sna_Latn",
-  1393621], ["run_Latn", 1336617], ["gaz_Latn", 1282924], ["kmb_Latn", 1250309], ["umb_Latn",
-  1220180], ["gle_Latn", 1174738], ["nya_Latn", 1174395], ["vie_Latn", 1162062], ["war_Latn",
-  1160826], ["tgl_Latn", 1110748], ["twi_Latn", 1104498], ["cjk_Latn", 1070363], ["bem_Latn",
-  1029941], ["kik_Latn", 946463], ["shn_Mymr", 918215], ["dyu_Latn", 909550], ["tum_Latn",
-  900903], ["tso_Latn", 834980], ["azj_Latn", 735725], ["ssw_Latn", 658001], ["dzo_Tibt",
-  617085], ["kbp_Latn", 608205], ["kin_Latn", 605624], ["yor_Latn", 545501], ["rus_Cyrl",
-  538724], ["kam_Latn", 536974], ["xho_Latn", 518884], ["jpn_Jpan", 492720], ["fon_Latn",
-  433729], ["ell_Grek", 409848], ["zul_Latn", 279375], ["ukr_Cyrl", 170556], ["bul_Cyrl",
-  91423], ["bod_Tibt", 87224], ["ara_Arab", 69366], ["snd_Arab", 57093], ["bho_Deva",
-  56450], ["bak_Cyrl", 55159], ["bel_Cyrl", 53564], ["srp_Cyrl", 45611], ["awa_Deva",
-  41063], ["hin_Deva", 40123], ["mag_Deva", 32240], ["mkd_Cyrl", 31062], ["khm_Khmr",
-  30265], ["knc_Arab", 30094], ["prs_Arab", 26977], ["kaz_Cyrl", 21374], ["heb_Hebr",
-  18493], ["tgk_Cyrl", 18373], ["mai_Deva", 16888], ["taq_Tfng", 12071], ["hye_Armn",
-  11426], ["pes_Arab", 11265], ["pan_Guru", 9983], ["kas_Deva", 8096], ["kir_Cyrl",
-  7160], ["ydd_Hebr", 6851], ["tam_Taml", 6513], ["tzm_Tfng", 5784], ["mar_Deva",
-  5189], ["khk_Cyrl", 5037], ["kat_Geor", 4493], ["san_Deva", 4280], ["tat_Cyrl",
-  4132], ["kas_Arab", 2342], ["tel_Telu", 2314], ["ace_Arab", 1471], ["urd_Arab",
-  1467], ["mya_Mymr", 1169], ["pbt_Arab", 1105], ["ben_Beng", 1045], ["ckb_Arab",
-  896], ["kan_Knda", 760], ["amh_Ethi", 743], ["mni_Beng", 629], ["bjn_Arab", 540],
-  ["mal_Mlym", 468], ["ory_Orya", 450], ["guj_Gujr", 406], ["sin_Sinh", 346], ["npi_Deva",
-  330], ["uig_Arab", 218], ["sat_Olck", 190], ["asm_Beng", 88], ["tir_Ethi", 33]]'
+src_langs: '[["pl", 3805185240], ["it", 199000164], ["en", 186366514], ["fr", 37304669], ["de", 36783459], ["es", 24599417], ["nl", 19851663],
+  ["cs", 13080257], ["pt", 10109778], ["sv", 9976137], ["eo", 9150812], ["sk", 8614572], ["sr", 8005233], ["ru", 7816300], ["hu", 7201785], 
+  ["fi", 6463058], ["sl", 6124885], ["nb", 5798653], ["hr", 4496871], ["ca", 4415101], ["zh", 3618764], ["id", 3536759], ["tr", 3117977], 
+  ["uk", 3059283], ["lt", 2714891], ["ceb", 2553520], ["ja", 2326332], ["da", 2326285], ["eu", 2263141], ["bs", 1874440], ["oc", 1849324],
+  ["ro", 1801970], ["et", 1481564], ["ko", 1387840], ["el", 1369730], ["ms", 1314091], ["fa", 1275975], ["la", 980884], ["war", 612293], 
+  ["fy", 485463], ["af", 463388], ["vi", 458365], ["sq", 429726], ["uz", 410821], ["gl", 409462], ["nn", 386312], ["az", 379529], ["ur", 364275], 
+  ["ar", 346801], ["lv", 318855], ["nds", 311127], ["cy", 295711], ["sw", 265482], ["te", 242067], ["lb", 231465], ["ta", 229061], ["kn", 211960], 
+  ["tl", 204459], ["jv", 200075], ["hsb", 196100], ["mk", 193358], ["th", 186565], ["als", 169812], ["vep", 165234], ["be", 154268], 
+  ["jbo", 151564], ["hy", 142546], ["br", 133855], ["pa", 124194], ["yue", 120546], ["ml", 119931], ["he", 108291], ["mt", 106625], 
+  ["bn", 103872], ["io", 97578], ["dsb", 97481], ["bg", 87307], ["is", 81936], ["ia", 76186], ["bar", 72187], ["wuu", 70044], ["ie", 69770], 
+  ["tt", 68156], ["mn", 68113], ["vec", 61665], ["kk", 57160], ["hi", 56092], ["su", 53372], ["vo", 51500], ["so", 51324], ["ka", 47732], 
+  ["ku", 40950], ["ast", 40341], ["ilo", 38443], ["min", 37686], ["mg", 36522], ["ga", 35162], ["mr", 34457], ["kw", 33509], ["rm", 33040], 
+  ["ce", 32387], ["km", 30175], ["pms", 29735], ["gd", 26755], ["my", 26294], ["si", 23625], ["eml", 23016], ["am", 20494], ["pam", 19593], 
+  ["ba", 18653], ["tk", 18510], ["gu", 17590], ["cbk", 17561], ["ne", 17142], ["qu", 16443], ["bcl", 15898], ["li", 14829], ["sco", 14802], 
+  ["lmo", 14622], ["gn", 13906], ["wa", 13695], ["tg", 13511], ["os", 13424], ["ht", 13003], ["ky", 12617], ["an", 12392], ["bo", 11487], 
+  ["mwl", 10559], ["ps", 9968], ["cv", 9931], ["gv", 9717], ["co", 8891], ["or", 7191], ["diq", 6950], ["yi", 6688], ["new", 6331], 
+  ["arz", 6020], ["scn", 5966], ["pnb", 5829], ["gom", 5577], ["vls", 5522], ["nap", 5292], ["frr", 5070], ["yo", 4958], ["sc", 4773], 
+  ["mhr", 4717], ["mzn", 4683], ["as", 4666], ["ckb", 4614], ["azb", 4256], ["ug", 4063], ["sah", 3805], ["sa", 3766], ["mrj", 3107], 
+  ["xal", 2916], ["rue", 2833], ["lo", 2792], ["dv", 2750], ["kv", 2559], ["nah", 2377], ["sd", 2219], ["lrc", 2134], ["krc", 1882],  
+  ["xmf", 1600], ["bh", 1553], ["myv", 1402], ["lez", 705], ["bpy", 679], ["pfl", 655], ["av", 630], ["bxr", 498], ["tyv", 368], ["hif", 361], ["mai", 160], ["dty", 46]]'
 src_tokens: 0
 srclang: pl
 timestamp: 1725676189.120138
