--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
     "next-themes": "^0.2.1",
     "next-yaml": "^1.0.1",
     "node": "^18.14.0",
+    "punycode": "^2.3.1",
     "react": "^18",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
